[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tat-verifier"
version = "1.0.0"
description = "Verify The Agent Times articles — signatures, evidence bundles, revision chains"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "The Agent Times"}]
requires-python = ">=3.9"
keywords = ["verification", "ed25519", "journalism", "agent", "trust"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "cryptography>=41.0",
    "httpx>=0.25",
]

[project.urls]
Homepage = "https://theagenttimes.com/verify.html"
Repository = "https://github.com/theagenttimes/tat-verifier"

[project.scripts]
tat-verifier = "tat_verifier:main"

[tool.setuptools]
py-modules = ["tat_verifier"]
